<resources>
    <string name="app_name">eMedi</string>
    <string name="doctors">Doctors</string>
    <string name="appointments">Appointments</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="change">Change</string>
    <string name="e_mail_address">E-mail address:</string>
    <string name="profile_picture">Profile picture</string>
    <string name="edit_button">Edit button</string>
    <string name="telephone_number">Telephone number:</string>
    <string name="address">Address:</string>
    <string name="log_out">Log out</string>
    <string name="editing">Editing</string>
    <string name="save_changes">Save changes</string>
    <string name="change_text">Change text:</string>
    <string name="error">Error!</string>
    <string name="change_in_dialog">Change %1$s:</string>
    <string name="no_address">no address</string>

    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="username">Username</string>
    <string name="register_underline"><u>Register</u></string>
    <string name="emedi">eMedi</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="birth_date">Birth date</string>
    <string name="e_mail">E-mail</string>
    <string name="phone_number">Phone number</string>
    <string name="adress">Adress</string>
    <string name="register">Register</string>
    <string name="required">Required</string>
    <string name="About">About</string>
    <string name="specialization">Specialization:</string>
    <string name="years_employed">Years employed:</string>
    <string name="job_description">Job description:</string>
    <string name="location">Location</string>
    <string name="clinic_name">Clinic name:</string>
    <string name="address1">Address:</string>
    <string name="contact">Contact</string>
    <string name="telephone">Telephone:</string>
    <string name="reviews">Reviews</string>
    <string name="booking">Booking</string>
    <string name="email">Email:</string>
    <string name="appointment_time">Appointment time</string>
    <string name="choose_an_avalible_date_and_time_slot">Choose an avalible date and time slot.</string>
    <string name="date">Date</string>
    <string name="start_time">Start time</string>
    <string name="end_time">End time</string>
    <string name="save_appointment_time">Save appointment time</string>
    <string name="close">Close</string>
    <string name="end_time_must_be_after_start_time">End time must be after start time!</string>
    <string name="date_is_not_chosen">Date is not chosen!</string>
    <string name="time_is_not_chosen">Time is not chosen!</string>
    <string name="you_have_appointments_already_on_that_date">You have appointments already on that date:</string>
    <string name="doctor_is_unavalible">Doctor is unavalible:</string>
    <string name="this_appointment_is_already_done">This appointment is already done.</string>
    <string name="view_details">View details</string>
    <string name="appointment_date">Appointment date</string>
    <string name="description">Description</string>
    <string name="doctor">Doctor</string>
    <string name="symptoms">Symptoms</string>
    <string name="diagnosis">Diagnosis</string>
    <string name="next_steps">Next steps</string>
    <string name="medications">Medications</string>
</resources>