<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <ImageView
        android:id="@+id/health_icon"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/ic_baseline_healing_24"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="56dp" />
    <TextView
        android:id="@+id/txt_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/emedi"
        android:textSize="36dp"
        android:layout_below="@id/health_icon"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"/>

    <EditText
        android:id="@+id/et_username_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:inputType="text"
        android:layout_below="@+id/txt_logo"
        android:layout_marginTop="32dp"
        android:padding="8dp"
        android:maxLines="1"
        />

    <EditText
        android:id="@+id/et_password_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="text"
        android:layout_below="@+id/et_username_edit"
        android:layout_marginTop="16dp"
        android:padding="8dp"
        android:maxLines="1"/>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/buttons_shape"
        android:text="@string/log_in"
        app:backgroundTint="@color/medi_blue"
        android:layout_below="@+id/et_password_edit"
        android:layout_marginTop="32dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_below="@+id/btn_login"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp">

        <TextView
            android:id="@+id/tv_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Don't have an account? "
            android:textColorLink="@color/medi_blue" />
        <TextView
            android:id="@+id/link_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_underline"
            android:textColor="@color/medi_blue"
            android:textColorLink="@color/medi_blue"
            android:clickable="true" />
    </LinearLayout>

</RelativeLayout>
