<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_login"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@android:color/transparent"
        app:title="Povratak"
        app:navigationIcon="@drawable/ic_baseline_arrow_back_ios_24"/>

    <EditText
        android:id="@+id/et_firstname_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLength="50"
        android:inputType="text"
        android:hint="@string/first_name"
        android:layout_marginTop="84dp"
        android:padding="10dp"
        android:maxLines="1"/>

    <TextView
        android:id="@+id/tv_firstname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_firstname_edit"
        android:layout_marginTop="-3dp"
        android:layout_marginLeft="20dp"
        android:visibility="invisible"
        android:text="@string/required"
        android:textColor="@color/negative_red"/>

    <EditText
        android:id="@+id/et_lastname_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_firstname_edit"
        android:layout_marginTop="20dp"
        android:hint="@string/last_name"
        android:padding="10dp"
        android:inputType="text"
        android:maxLines="1"/>
    <TextView
        android:id="@+id/tv_lastname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_lastname_edit"
        android:layout_marginTop="-3dp"
        android:layout_marginLeft="20dp"
        android:visibility="invisible"
        android:text="@string/required"
        android:textColor="@color/negative_red" />

    <EditText
        android:id="@+id/et_birthdate_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_lastname_edit"
        android:layout_marginTop="20dp"
        android:hint="@string/birth_date"
        android:padding="10dp"/>
    <TextView
        android:id="@+id/tv_birthdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_birthdate_edit"
        android:layout_marginTop="-3dp"
        android:layout_marginLeft="20dp"
        android:visibility="invisible"
        android:text="@string/required"
        android:textColor="@color/negative_red" />

    <EditText
        android:id="@+id/et_email_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/e_mail"
        android:layout_below="@+id/et_birthdate_edit"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        android:inputType="text"
        android:maxLines="1"/>
    <TextView
        android:id="@+id/tv_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_email_edit"
        android:layout_marginTop="-3dp"
        android:layout_marginLeft="20dp"
        android:visibility="invisible"
        android:text="@string/required"
        android:textColor="@color/negative_red" />

    <EditText
        android:id="@+id/et_phone_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phone_number"
        android:layout_below="@+id/et_email_edit"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        android:inputType="text"
        android:maxLines="1"/>
    <TextView
        android:id="@+id/tv_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_phone_edit"
        android:layout_marginTop="-3dp"
        android:layout_marginLeft="20dp"
        android:visibility="invisible"
        android:text="@string/required"
        android:textColor="@color/negative_red" />

    <EditText
        android:id="@+id/et_address_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/adress"
        android:layout_below="@+id/et_phone_edit"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        android:inputType="text"
        android:maxLines="2"/>
    <TextView
        android:id="@+id/tv_adrress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_address_edit"
        android:layout_marginTop="-3dp"
        android:layout_marginLeft="20dp"
        android:visibility="invisible"
        android:text="@string/required"
        android:textColor="@color/negative_red" />

    <EditText
        android:id="@+id/et_register_username_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:layout_below="@+id/et_address_edit"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        android:inputType="text"
        android:maxLines="1"/>
    <TextView
        android:id="@+id/tv_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_register_username_edit"
        android:layout_marginTop="-3dp"
        android:layout_marginLeft="20dp"
        android:visibility="invisible"
        android:text="@string/required"
        android:textColor="@color/negative_red" />

    <EditText
        android:id="@+id/et_register_password_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_register_username_edit"
        android:layout_marginTop="20dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:maxLines="1"/>
    <TextView
        android:id="@+id/tv_password_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_register_password_edit"
        android:layout_marginTop="-3dp"
        android:layout_marginLeft="20dp"
        android:visibility="invisible"
        android:text="@string/required"
        android:textColor="@color/negative_red" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/buttons_shape"
        android:layout_below="@+id/et_register_password_edit"
        android:layout_marginTop="48dp"
        app:backgroundTint="@color/medi_blue"
        android:text="@string/register" />

</RelativeLayout>
