<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".fragments.ProfileFragment">

    <TextView
        android:id="@+id/tv_profile_fragment_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textSize="36sp"
        android:text="@string/profile"
        android:padding="5dp"
        android:textColor="@color/white"
        android:background="@color/medi_blue"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="12dp">
        <TextView
            android:id="@+id/tv_name_and_surname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="36sp"
            tools:text="Ivan Ivic"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="16dp"
            android:id="@+id/tv_editing_text"
            android:textSize="16sp"
            android:text="@string/editing"/>
        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
        <ImageView
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:src="@drawable/ic_baseline_edit_note_24"
            android:layout_gravity="center_vertical"
            android:id="@+id/iv_edit_profile"
            android:contentDescription="@string/edit_button"/>
        <ImageView
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:src="@drawable/ic_baseline_done_24"
            android:layout_gravity="center_vertical"
            app:tint="@color/positive_green"
            android:id="@+id/iv_save_changes"
            android:contentDescription="@string/save_changes"/>
    </LinearLayout>

    <ImageView
        android:id="@+id/iv_profile_picture"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/profile_picture"
        android:src="@drawable/default_profile_picture"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="12dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@id/tv_username"
                android:textSize="16sp"
                android:text="@string/username" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:id="@+id/tv_username"
                tools:text="ivanivic200"/>
        </LinearLayout>
        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="12dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@id/tv_birth_date"
                android:layout_gravity="end"
                android:textSize="16sp"
                android:text="@string/birth_date" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:id="@+id/tv_birth_date"
                tools:text="12.23.2023."/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="12dp">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@id/tv_email"
                android:textSize="16sp"
                android:text="@string/e_mail_address" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:id="@+id/tv_email"
                tools:text="myemail@email.com"/>
        </LinearLayout>
        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textSize="24sp"
            android:id="@+id/tv_change_email"
            android:textColor="@color/positive_green"
            android:text="@string/change"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="12dp">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@id/tv_telephone_number"
                android:textSize="16sp"
                android:text="@string/telephone_number" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:id="@+id/tv_telephone_number"
                tools:text="123 456-7890"/>
        </LinearLayout>
        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textSize="24sp"
            android:id="@+id/tv_change_telephone_number"
            android:textColor="@color/positive_green"
            android:text="@string/change"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="12dp">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@id/tv_address"
                android:textSize="16sp"
                android:text="@string/address" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:id="@+id/tv_address"
                tools:text="This street 1 2 3"/>
        </LinearLayout>
        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textSize="24sp"
            android:id="@+id/tv_change_address"
            android:textColor="@color/positive_green"
            android:text="@string/change"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp"
        android:gravity="center">

        <!-- Existing Button -->
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_gravity="center_horizontal"
            android:id="@+id/btn_logout"
            android:background="@drawable/buttons_shape"
            app:backgroundTint="@color/medi_blue"
            android:text="@string/log_out" />

        <!-- Space between buttons -->
        <Space
            android:layout_width="30dp"
            android:layout_height="match_parent" />

        <!-- New Button -->
        <Button
            android:id="@+id/btn_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Delete"
            android:background="@drawable/buttons_shape"
            android:layout_gravity="center_horizontal"
            app:backgroundTint="@color/medi_blue"/>

    </LinearLayout>

</LinearLayout>